# appFrame

./: '  .gitignore  CMakeLists.txt  README.md  ]  run.bat  runClient.bat  runServer.bat  taskMgr.xml
appTestLogicMgr/: CMakeLists.txt
appTestServer/: CMakeLists.txt
cLog/: CMakeLists.txt
cLog/src/: cLog.cpp  cLog.h
comTcpProNet/: CMakeLists.txt
common/: CMakeLists.txt
common/src/: ITcpServer.h  TAlgorithm.h  argMgr.cpp  argMgr.h  comFun.cpp  comFun.h  fpsCount.h  framMsgId.h  iLoopForLogic.h  iRpcInfoMgr.h  loop.h  mainLoop.h  msgMgr.cpp  msgMgr.h  packet.h  strFun.cpp  strFun.h  tJumpListNS.h  typeDef.h
common/src/unix/: common_unix.cpp
common/src/win/: common_win.cpp
configFile/: CMakeLists.txt
cppLevel0/: CMakeLists.txt
cppLevel0/src/: main.cpp
cppLevel0/src/unix/: depSys_unix.cpp
cppLevel0/src/win/: depSys.cpp  loadLevel0_win.cpp
cppLevel0L/: CMakeLists.txt  cppLevel0L.cpp  cppLevel0L.h  deListMsgQue.cpp  server.cpp  server.h  slistMsgQue.cpp  slistMsgQue.h
cppLevel0L/src/: CModule.cpp  CModule.h  argConfig.cpp  argConfig.h  cArgMgr.cpp  cArgMgr.h  clientRouteServer.cpp  clientRouteServer.h  comMsgMsgId.h  cppLevel0L.cpp  cppLevel0L.def  cppLevel0L.h  cppLevel0LCom.h  deListMsgQue.cpp  deListMsgQue.h  gateRouteServer.cpp  gateRouteServer.h  iTokenSave.h  impLoop.cpp  impLoop.h  impMainLoop.cpp  impPackSave_map.cpp  mArgMgr.cpp  mArgMgr.h  mLog.cpp  mLog.h  notClientRouteServer.cpp  notClientRouteServer.h  routeServerBase.cpp  routeServerBase.h  server.cpp  server.h  serverMgr.cpp  serverMgr.h  slistMsgQue.cpp  sysMsgProc.cpp  tokenSave_map.cpp  tokenSave_map.h  workServer.cpp  workServer.h  (+2 more)
cppLevel0L/src/unix/: lib.vers  osDep.cpp
cppLevel0L/src/win/: cppLevel0L.def  serverMgr_win.cpp
fileS/: cChessMsg.xml
firstBuild/: CMakeLists.txt
firstBuild/common/: CMakeLists.txt
firstBuild/common/src/: ITcpServer.h  comFun.cpp  comFun.h  loop.h  mainLoop.h  modelLoder.h  msg.cpp  msgMgr.cpp  packet.h  strFun.cpp  strFun.h
firstBuild/common/src/unix/: common_unix.cpp
firstBuild/common/src/win/: common_win.cpp
frameConfig/: CMakeLists.txt
genTool/: CMakeLists.txt
libeventSession/: CMakeLists.txt  Session.cpp  Session.h  libevListener.cpp  libevListener.h  libeventConnector.cpp  libeventConnector.h  libeventNet.cpp  libeventNet.h  libeventServerSession.cpp  libeventServerSession.h  libeventSession.cpp  libeventSession.h
libeventSession/src/: libeventConnector.cpp  libeventConnector.h  libeventListener.cpp  libeventListener.h  libeventServerCom.cpp  libeventServerCom.h  libeventServerSession.cpp  libeventServerSession.h  libeventSession.def  libeventSessionCom.cpp  libeventSessionCom.h  nLog.h
libeventSession/src/unix/: lib.vers  sysDep.cpp  sysinc.h
libeventSession/src/win/: sysDep.cpp  sysinc.h
logicCommon/: CMakeLists.txt
logicCommon/src/: SingleConnectorWorker.cpp  SingleConnectorWorker.h  gLog.cpp  gLog.h  gateCommonWorker.cpp  gateCommonWorker.h  gateRouteWorker.cpp  gateRouteWorker.h  gloableData.cpp  gloableData.h  internalChannel.h  internalMsgGroup.h  internalMsgId.h  internalRpc.cpp  internalRpc.h  logicFrameConfig.cpp  logicFrameConfig.h  logicServer.cpp  logicServer.h  logicServerMgr.cpp  logicServerMgr.h  logicWorker.cpp  logicWorker.h  logicWorkerMgr.cpp  logicWorkerMgr.h  msg.cpp  msg.h  routeWorker.cpp  routeWorker.h  serverCommonWorker.cpp  serverCommonWorker.h  serverRouteWorker.cpp  serverRouteWorker.h  serverWorker.cpp  serverWorker.h
logicCommon/src/unix/: osDep.cpp
logicCommon/src/win/: osDep.cpp
logicModelMgr/: CMakeLists.txt
logicModelMgr/src/: exportFun.cpp  exportFun.h  logicServer.cpp  logicServer.h  testLogic.def
logicModelMgr/src/win/: win.cpp
midFrame/: CMakeLists.txt
midFrame/src/: CModule.cpp  CModule.h  comMsgRpc.cpp  comMsgRpc.h  iPackSave.h  impLoop.cpp  impLoop.h  impMainLoop.cpp  impMainLoop.h  impPackSave_map.cpp  impPackSave_map.h  mArgMgr.cpp  mArgMgr.h  mLog.cpp  mLog.h  sysMsgProc.cpp
midFrame/src/unix/: CModule_unix.cpp
midFrame/src/win/: CModule_win.cpp  midFrame.def  osDep.cpp
taskMgr/: CMakeLists.txt
taskMgr/taskClient/: CMakeLists.txt
taskMgr/taskClient/src/: exportFun.cpp
taskMgr/taskClient/src/taskClientConTh/: OnCreateChannelRet.cpp  onLoopBegin.cpp  onLoopEnd.cpp  onLoopFrame.cpp  onWorkerInit.cpp
taskMgr/taskClient/src/taskClientNetTh/: OnCreateChannelRet.cpp  onLoopBegin.cpp  onLoopEnd.cpp  onLoopFrame.cpp  onWorkerInit.cpp
taskMgr/taskGate/: CMakeLists.txt
taskMgr/taskGate/src/: exportFun.cpp
taskMgr/taskGate/src/taskGateConTh/: OnCreateChannelRet.cpp  onLoopBegin.cpp  onLoopEnd.cpp  onLoopFrame.cpp  onWorkerInit.cpp
taskMgr/taskGate/src/taskGateNetTh/: OnCreateChannelRet.cpp  onLoopBegin.cpp  onLoopEnd.cpp  onLoopFrame.cpp  onWorkerInit.cpp
taskMgr/taskServer/: CMakeLists.txt
taskMgr/taskServer/src/: exportFun.cpp
taskMgr/taskServer/src/taskServerConTh/: OnCreateChannelRet.cpp  onLoopBegin.cpp  onLoopEnd.cpp  onLoopFrame.cpp  onWorkerInit.cpp
taskMgr/taskServer/src/taskServerNetTh/: OnCreateChannelRet.cpp  onLoopBegin.cpp  onLoopEnd.cpp  onLoopFrame.cpp  onWorkerInit.cpp
test/: CGTest.xml  CMakeLists.txt  SGCTest.xml  cChess.xml  chatTest.xml  chatTestConfig.xml  comMsg.xml  frameConfig.xml  gateTest.xml  genTest.xml  genToolConfig.xml  localTest.xml  main.xml  newChat.xml  newSGCTest.xml  openNumTest.xml  openWorkDir.xml  test.xml  testGen.xml  testSysMsg.xml  yuan1.xml
test/appClientLogicModelMgr/: CMakeLists.txt
test/appClientServer/: CMakeLists.txt
test/appClientServerLogicModelMgr/: CMakeLists.txt
test/appServer/: CMakeLists.txt
test/appServerLogicModelMgr/: CMakeLists.txt
test/defMsg/src/: CChessMsgID.h  CChessRpc.cpp  CChessRpc.h  libMsg.cpp  msgPmpID.h
testLogic/: CMakeLists.txt
testLogic/src/: exportFun.cpp  exportFun.h  logicServer.cpp  logicServer.h  testLogic.def
testLogicB/: CMakeLists.txt
testLogicB/src/: exportFun.cpp  exportFun.h  logicServer.cpp  logicServer.h
testLogicMsg/: CMakeLists.txt
testLogicMsg/src/: CChessRpc.cpp  rpcInfo.cpp  rpcInfo.h  testLogicMsg.cpp  testLogicMsg.h  testRpc.h
(+222 files in other folders)
