cmake_minimum_required(VERSION 3.16) 
set(BUILD_USE_64BITS on)
set(CMAKE_CXX_STANDARD 20) 
set(CMAKE_CXX_STANDARD_REQUIRED True) 

# set (myProjectName appFrame)
set (myProjectName appFrame CACHE INTERNAL "Shared variable")
project(${myProjectName})
SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/../${myProjectName}Install)

set (firstBuildInc ${CMAKE_INSTALL_PREFIX}/include/appFrame  CACHE INTERNAL "Shared variable")
set (firstBuildLib ${CMAKE_INSTALL_PREFIX}/lib  CACHE INTERNAL "Shared variable")
# add_subdirectory (common)
add_subdirectory (midFrame)
add_subdirectory (cppLevel0L)
add_subdirectory (cppLevel0)
add_subdirectory (logicCommon)
add_subdirectory (libeventSession)
# add_subdirectory (comTcpProNet)
# add_subdirectory (cLog)
# add_subdirectory (genTool)
add_subdirectory (frameConfig)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
