cmake_minimum_required(VERSION 3.16) 
set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_HOME}/scripts/buildsystems/vcpkg.cmake")
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Debug)
endif()
set(BUILD_USE_64BITS on)
set(CMAKE_CXX_STANDARD 20) 
set(CMAKE_CXX_STANDARD_REQUIRED True) 
if (UNIX)
	MESSAGE(STATUS "unix add -Wl,-Bsymbolic")
	set(CMAKE_CXX_LINK_OPTIONS "${CMAKE_CXX_LINK_OPTIONS} -Wl,-Bsymbolic")
endif ()

set (myProjectName taskMgr)
project(${myProjectName})
set (firstBuildInc C:/work/appFrameInstall/include/appFrame  CACHE INTERNAL "Shared variable")
set (firstBuildLib C:/work/appFrameInstall/lib  CACHE INTERNAL "Shared variable")
SET(CMAKE_INSTALL_PREFIX C:/work/appFrameInstall)
add_subdirectory (gen)
	
add_subdirectory (taskClient)
add_subdirectory (taskGate)
add_subdirectory (taskServer)
